updated multiple file function, initial dark mode click fixed

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,15 +38,18 @@ button, button:focus, button:active, button:active, button:after, button::before
   border: 1px solid $dark-grey!important;
   color: $darker-grey;
 }
-button.is-static {
-  opacity: .75;
-}
 .table {
   width: 100%;
   background-color: transparent!important;
 }
 .table tr td {
   vertical-align: middle;
+}
+table.files tr td:first-child {
+  width: 3em;
+}
+table.files tr td:last-child {
+  cursor: pointer;
 }
 body::-webkit-scrollbar {
   display: none;
@@ -739,6 +742,7 @@ nav {
       background: none;
     }
     table th {
+      padding-left: 0;
       font-family: "FreeSansBold";
     }
     table td {
